# youtube-speak

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
youtube-speak/: main.py
